implemented flying of single balloon

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           
         </div>
         <div class="div4" id="initialBalloon">
-        <img src="Graphics/Balloon_blue.png" id="firstballoon" alt="">  
-        </div>
+          <img src="Graphics/Balloon_blue.png" id="firstballoon" alt="">
+          <img src="Graphics/A.png" id="alphabetImage" alt="Alphabet" class="alphabet-image">
         </div>
   
         <!-- 
